Actualizar config.json

--- a/config.json
+++ b/config.json
@@ -1,1 +1,152 @@
-▃▛▝▆▟█▟▇▞▙▞▙▜▚▞▙▞▚▝▊▃▝▟▅▝▅▃▆▝▜▞▙▝▝▜▅▞▟▜▛▟▐▝▄▛▇▞▆▃▚▝▇▜▃▃▛▃▞▞▚▜▜▟▞▟▊▟▝▟▄▃▃▞▟▞▚▞▛▝▞▃▟▟▉▃▙▟▃▟▜▃▜▃▞▝█▞▆▝▄▟▛▜▄▃▆▝▇▃▜▝▆▞▃▟▐▃▟▟▃▟▛▜▝▜▛▞▟▃▙▜▅▟▞▜▛▛▇▜▝▟▞▛▇▃▃▝▉▞▙▃▝▞▅▜▃▃▙▝▛▃▃▞▞▝▅▞▙▞▝▟▝▜▅▟▅▞▚▟▚▃▚▜▝▟▇▃▝▝▉▃▚▃▝▝▛▛▇▃▝▝█▞▞▞▜▝▆▛▇▃▞▟▃▝▜▜▚▜▙▝▛▟▃▜▚▝▟▝▄▛▇▃▞▃▙▃▟▃▛▃▝▜▞▞▜▞▚▜▛▜▅▟▉▜▛▟▐▃▜▃▄▜▝▞▞▟▉▝▜▟▐▝▊▜▙▞▚▞▃▟▅▟▆▟▟▟▟▟▝▃▅▜▅▛▇▜▙▝▉▃▟▜▞▜▞▃▄▝▃▝█▟▚▟▝▝▞▞▄▟█▃▙▜▙▜▄▟▐▟▄▞▛▞▃▟▅▞▙▝▐▃▆▜▝▜▟▞▆▝▅▝▊▞▄▝▆▟▜▟▄▞▙▝▐▟▜▞▝▝▟▝▆▝▐▜▞▞▅▞▙▞▝▞▃▟▝▝▞▝▜▟▄▜▙▟▉▃▆▝▃▟▉▞▟▜▟▝▊▞▞▝▅▟█▞▝▞▆▃▆▃▙▝▄▃▙▛▐▜▙▝▞▝▐▞▞▃▝▝▉▟▞▃▆▞▛▞▚▝█▞▝▞▟▝▄▝▊▟▄▝▟▞▜▃▅▃▞▟▃▟▇▃▆▝▝▞▝▞▄▜▚▃▟▃▞▞▝▟▐▜▄▃▟▟▛▟▚▝▃▞▞▛▇▞▚▟▃▝▐▃▚▃▃▜▄▝▛▃▜▃▜▞▛▃▅▜▞▜▙▟▟▜▃▟█▜▝▟▇▟▚▃▚▟▛▜▛▜▃▜▛▝▅▟▛▞▙▝▅▝▉▃▃▞▄▝▄▞▅▞▄▜▄▟▄▟▝▝▐▜▟▜▝▜▞▟▞▟▊▃▅▞▆▟▃▟▄▃▚▟▉▞▞▃▄▝▉▃▚▝▚▟▐▜▃▝▝▟▆▃▝▃▙▝█▜▛▝▞▝▆▟▚▟▞▞▆▝▜▟▉▟▞▜▃▞▃▟▟▞▛▟▃▞▆▜▛▃▅▟▅▝▄▞▞▝▚▃▆▟▟▛▐▛▐▝▉▝▆▟▟▟▉▃▜▃▚▜▜▃▛▟▉▟▞▝▅▝▟▞▃▃▚▞▞▜▛▟▃▟▞▃▆▞▚▟▅▟▅▜▛▞▚▜▙▝▃▟▇▛▇▞▄▟▆▝▃▝▆▞▝▝▚▜▙▟▞▃▄▜▚▃▜▃▆▛▐▞▜▞▟▟▟▃▄▜▛▝▝▟▄▃▞▝▜▞▞▃▚▜▟▞▆▞▙▃▝▞▆▟▊▜▙▃▝▃▄▟▚▜▞▛▐▟▉▝▐▟▉▝▝▃▟▃▚▟▄▟▛▟▅▟▜▞▆▞▅▜▄▃▄▟▄▞▟▝▞▟▝▝▇▜▜▜▃▜▅▟▜▞▃▝▉▞▆▝▆▟▇▃▚▃▝▝█▝▟▃▞▛▐▝▇▟▄▜▝▜▅▃▃▃▆▟█▞▞▝▄▞▛▜▃▝█▞▃▜▃▞▝▝▄▃▃▜▄▜▟▃▆▝▇▃▅▃▃▝▚▟▝▃▅▝▆▝▄▜▙▝▅▟▞▟▊▃▆▟▉▃▃▟▝▞▚▃▅▃▙▜▞▜▞▝▄▞▄▃▆▟▊▞▟▜▅▟▆▛▐▃▜▝▞▞▆▝▃▟▚▟▟▃▝▜▚▃▅▟▚▜▄▞▃▞▅▝▞▜▚▃▅▃▜▃▟▟▞▃▛▜▙▝▃▃▞▜▟▟█▜▜▞▜▃▆▟▃▞▃▞▄▝▊▃▟▟▇▝█▟▜▟▟▟▐▝▇▃▛▜▅▜▅▟▛▟▄▝▞▜▙▜▚▟▜▜▟▝▛▛▐▟▄▃▚▝▉▜▜▜▚▟▞▟▟▝▇▞▞▟▇▃▛▃▞▃▞▟▆▞▝▝▉▞▙▝▞▟▅▜▃▞▚▃▄▟▐▞▃▜▟▞▙▞▚▞▆▃▄▟█▞▙▟▊▃▝▞▃▝▃▟▝▃▚▜▞▝▞▜▙▟▃▟▐▞▙▞▆▟▐▜▛▝▛▛▇▝▅▜▚▝▉▝▅▝▚▟▐▃▄▝▄▟▉▝▜▜▜▝▜▞▜▞▞▟▟▃▝▃▜▟▊▟▅▝▐▟▉▃▚▃▙▝▚▃▆▟▅▝▞▃▟▃▅▝▇▝▉▃▙▝▉▃▆▝▟▛▇▟▞▟▊▃▛▜▛▜▙▜▃▞▃▜▃▟▛▞▆▝▊▜▟▃▚▛▐▞▄▟▉▜▟▃▙▟▝▝▚▝▊▝▛▝▐▃▜▃▙▝▝▜▝▟▃▃▛▟▊▃▝▞▚▟▛▟█▞▟▞▆▝▉▝▝▃▞▝▉▞▙▞▄▃▄▜▚▞▟▞▜▞▞▟▇▃▜▝▉▃▜▞▝▟█▟▞▟▅▝▚▞▞▛▐▟▜▝▛▃▟▜▞▞▄▟▞▜▅▜▛▝▇▜▛▜▝▝▃▞▝▜▞▃▙▝▚▝▆▟▇▛▇▃▟▟▊▞▄▞▅▟▆▟▃▞▞▝█▝▅▟▇▛▇▛▐▜▙▝█▝▆▟▊▟▆▟▇▝▃▟▆▟▃▝▃▜▙▃▝▝▊▛▇▝▐▃▞▜▙▃▄▜▟▟▅▝▃▜▃▟▟▜▄▝▉▃▆▞▅▟▅▃▅▟▉▞▙▝▞▃▄▟▜▜▃▟▜▜▜▜▝▟█▟▞▞▟▃▄▞▙▞▆▟▇▃▜▃▞▝▅▟▄▃▞▝▞▟▚▟▚▃▅▃▃▃▞▃▟▜▜▃▛▝▛▜▄▟█▜▝▃▆▝▜▃▅▟▆▝▉▝▐▟▄▞▛▝▝▝▜▟▛▝█▜▝▝▇▜▝▞▜▜▚▟▉▟▞▟▄▟▃▛▐▝▚▟▆▃▃▜▛▛▇▝▚▟▝▟▅▝▊▃▛▞▜▝▊▞▝▃▚▜▟▝▇▜▟▟▉▜▛▞▆▞▟▞▆▝▉▜▚▟▐▞▃▟▄▜▟▟▉▝▃▝▃▞▝▞▆▜▞▃▜▟▃▟▄▜▙▜▛▝▝▟▜▞▃▟▄▃▞▞▟▝▜▃▛▟▄▃▙▞▛▝▅▜▄▟▃▜▄▟▊▃▛▃▜▞▟▜▄▟█▞▃▜▝▟▟▞▆▞▆▝▄▜▃▃▝▜▛▞▛▝▛▃▚▟▅▞▅▃▅▝▜▃▙▟▉▝█▃▃▛▇▞▜▝▞▟▝▞▞▝▜▞▜▜▅▞▃▝▚▟▜▃▞▟▟▟▉▃▅▝▇▞▛▞▄▃▃▝▚▞▄▝▟▝█▟▝▞▜▟▜▝▐▜▟▛▐▟▟▞▟▜▟▞▆▝▄▞▅▝▅▟▟▃▄▟▞▜▚▞▅▃▃▟▄▜▟▃▄▃▚▝▉▞▞▟▉▜▙▜▞▟▅▞▙▜▝▃▆▟▞▜▚▟▟▃▟▝▇▝▆▞▟▝▇▝▉▛▐▞▛▟▃▃▜▝▃▜▙▟▊▜▜▃▄▞▞▝▊▟█▝▄▃▝▝▄▜▙▞▙▟▞▞▜▜▟▜▟▞▆▟▝▜▞▃▞▜▝▝▟▝▛▞▅▃▅▃▙▞▛▝▄▜▛▞▆▟▆▟▟▟▄▞▟▜▞▝▉▝▜▞▆▜▝▝▛▞▝▟▃▝▊▞▛▝▉▟▇▟▉▃▃▃▝▝▃▝▝▝▝▟▉▝▚▞▞▟▐▜▜▛▇▃▚▟▝▝▝▝▄▜▃▞▆▟▉▟▟▃▟▝▃▟▃▟▅▟▜▝▃▝▝▟▃▝▚▃▛▟▜▟█▃▛▞▟▜▄▟▇▃▙▝▚▞▚▞▚▝▜▜▙▟▟▝▟▝▟▝▅▝▞▃▃▞▅▜▃▟▐▜▝▝▃▟▊▝▟▜▅▃▆▟▞▞▝▟▃▟▜▝▉▃▛▃▛▝▞▃▃▝▇▟▊▜▚▞▃▟▜▟▆▟█▃▄▟█▟▝▟▉▝▞▜▙▝▇▜▜▟▅▜▞▟▐▃▚▃▟▝█▝▃▃▛▞▃▃▆▟▛▟▜▝▟▞▄▜▃▟▄▟▟▝▟▟▄▛▐▜▟▝▝▝█▞▚▃▆▞▛▞▃▃▆▃▝▟▉▞▅▜▟▝▜▝▟▞▆▞▅▞▛▃▄▞▄▃▞▟▆▟▚▃▛▃▜▝▆▝▊▝▉▛▇▞▟▃▝▃▆▞▜▞▅▃▆▃▞▜▃▃▄▜▙▟▉▜▞▟▝▝▝▝▉▃▚▝▛▟▉▃▟▞▝▃▙▃▃▃▝▜▜▞▅▜▙▞▃▞▚▞▆▟▐▃▅▝▛▝▚▜▙▝▅▞▟▟▄▛▇▃▄▝▄▞▟▃▅▟▄▜▅▃▃▟▞▟▄▟▐▟▛▜▙▜▃▞▆▝▝▝▟▝▄▝▆▝▉▜▃▜▃▝▐▃▜▝▝▟▜▝▟▃▙▞▆▝▅▜▝▝▜▝▆▝▟▜▞▞▟▟▄▞▜▜▛▜▛▃▛▟▐▟▝▃▞▃▚▞▃▟▇▝▞▟▃▟▊▝▇▞▛▜▞▟▜▝▝▝▆▝█▟▛▟█▞▅▛▇▝▞▝▊▝▝▞▃▞▆▃▄▝▄▃▞▞▜▞▜▝▝▞▟▃▅▞▜▃▜▞▅▜▞▃▜▟▇▟▟▃▞▟▞▟▝▃▅▟▆▃▚▟▚▟▝▟▆▜▟▜▞▜▞▝▆▞▟▝▞▜▃▝▊▟▚▃▛▝▚▟▇▝▛▜▜▟▉▛▇▞▃▞▙▃▝▟▞▞▝▜▃▜▙▟▉▝▐▝▊▝▇▜▛▟▊▃▝▞▆▜▙▃▙▞▃▟▃▟▃▟▇▜▛▟▚▟█▟▄▝▉▜▚▞▚▞▝▞▞▞▞▝▃▛▐▝▇▝▉▟▞▜▞▞▙▜▞▟▟▞▅▃▚▝▃▝▞▞▟▜▙▟▃▞▞▟▚▟▝▝▜▟▊▃▃▃▅▞▞▟█▃▚▞▚▛▇▟▄▃▛▟▐▜▄▟▅▜▙▟▞▃▞▜▙▃▙▟▊▟▉▟▄▝▞▝▆▟▐▞▛▞▛▃▃▝▐▜▚▛▐▃▄▃▚▝▜▝▆▝▉▃▅▟█▟▛▜▄▃▄▃▞▞▟▜▞▜▞▃▝▜▙▃▃▟▉▟▚▞▙▞▆▝▇▞▞▟▝▟▜▝▞▞▅▟▟▜▅▝▉▃▜▞▆▟▉▞▟▃▙▟▜▟▄▞▅▝▐▟▜▟▆▃▄▟▉▝▉▝▇▃▃▟▛▝▅▝█▃▚▞▝▝▇▃▞▝▄▜▅▞▜▟▟▃▚▜▜▃▛▟▃▝█▜▞▜▞▜▛▞▝▟▝▛▐▟▅▟▚▜▞▞▅▝▃▞▄▜▚▝▆▝▝▝▇▟▚▞▞▜▜▜▙▞▝▃▙▟▉▝▝▃▞▃▚▝▐▟▅▟▞▟▉▟▃▞▛▝▝▞▙▞▄▞▃▞▙▟▆▝▟▝▆▞▚▟▞▛▐▜▝▝█▟▉▜▅▝▉▞▝▃▅▝▐▟▇▞▜▞▄▃▅▛▇▝▊▟▟▝▅▃▟▝█▃▙▞▅▃▙▝▅▝▜▞▙▝▅▃▞▟▜▟▐▟▃▃▅▞▃▞▙▟▃▞▆▟▅▝▜▃▙▟▐▛▇▝▄▜▞▞▛▟▃▟▞▞▝▃▜▟▄▝█▜▃▃▆▟▚▝▊▟▜▃▃▞▚▝▞▝▚▝▜▜▃▞▆▝▝▟▜▝▜▃▟▟▇▟▚▞▝▟█▝▄▜▞▛▐▜▚▜▟▞▆▞▞▝▉▝▄▛▇▜▅▝█▞▜▟▃▞▃▃▄▃▅▜▟▜▝▞▛▟▟▞▜▞▅▝▞▃▟▜▅▟▅▃▆▟▛▜▅▝▚▞▞▃▚▞▚▝▄▞▄▝▟▜▟▃▞▞▄▃▞▟▟▜▃▞▛▛▐▝▃▟▃▟▅▜▄▝▞▝▇▟▄▜▝▜▙▟▟▛▇▃▟▃▝▟▐▝▞▝▅▟▃▞▜▜▚▞▞▃▙▝▇▟▞▃▄▜▝▃▚▞▙▝▜▞▝▟▐▃▄▝▅▟▊▝▝▟▐▟█▟▉▃▄▞▙▞▆▟▅▞▙▝▟▃▟▟█▟▄▝▄▟▄▞▄▟▜▛▇▞▙▜▞▝▊▟▟▜▃▟▜▃▟▜▚▞▄▃▟▝▛▃▚▞▞▜▙▝▞▃▝▝▄▟█▝▅▝▄▝▚▝▚▃▜▜▙▟▄▝▜▝▊▃▟▟▃▜▜▃▅▜▄▃▞▟▄▞▟▝█▃▟▟▟▃▄▜▙▃▚▟▐▝▆▛▇▞▞▝█▜▃▞▚▟█▞▃▃▙▜▙▜▜▞▄▞▟▜▅▞▙▃▝▛▐▜▜▜▅▜▞▜▄▟▉▟▞▟▅▃▛▝▄▟▊▃▟▃▅▝▚▟▉▟▟▜▜▝▊▜▚▛▇▞▙▟▄▝▅▞▙▝▝▝▊▟▅▃▆▝▝▟▚▝▚▃▄▞▙▟▐▝▝▜▟▝▉▜▚▝▟▃▃▜▛▝▉▝▞▟▉▃▞▃▅▞▄▃▙▜▅▟█▟▐▜▝▝▉▝▐▟▉▟▄▝▃▝▉▝▜▃▆▝▝▃▚▟▟▞▚▜▃▝▄▞▚▟▝▞▜▝▜▜▟▞▟▃▞▝▝▟▐▃▆▛▇▞▅▝▃▝▞▜▃▝▉▜▙▃▜▟█▃▚▝▆▟▜▜▞▟▛▃▃▝▐▜▅▛▇▃▙▝▜▛▇▞▃▞▆▜▚▝▟▝▃▃▛▝▝▝▞▟▜▟▞▟▞▟▇▟█▜▃▃▛▝▞▝▝▝▄▟▞▟▞▞▙▝▐▜▚▜▝▞▛▛▇▝▞▃▃▃▆▜▅▜▜▜▚▝█▃▄▟▅▃▅▝▉▃▚▝▉▟▚▃▄▝▃▝▆▃▄▟▛▝▟▞▆▜▄▝▚▝▛▝▃▞▃▃▜▝▞▝▊▜▙▟▛▜▛▃▄▟▚▝▃▝▚▜▞▃▃▞▆▟▜▟▝▝▞▞▜▜▅▛▇▝█▜▚▝▐▃▃▝▚▝▅▞▄▃▝▞▞▝▆▞▜▞▄▝▄▞▄▜▚▟▛▟▐▝▅▝▜▟▉▃▚▜▃▝█▝▆▟▜▟▝▞▝▟▇▝▛▟▟▜▃▞▆▜▅▝▆▃▛▝▇▜▙▜▚▃▆▞▄▟▜▜▄▃▄▝▃▟▉▝▝▟▝▃▞▜▞▞▛▛▇▝▉▜▃▃▙▃▙▟▄▜▛▟▟▟▚▜▄▞▅▝▝▟▊▟▛▞▃▃▟▞▟▃▞▟▞▜▅▟▐▞▜▜▄▞▟▜▛▟▚▝▇▞▄▟▝▝▞▞▅▝▟▝▊▟▆▜▛▃▅▃▚▝█▞▙▜▅▃▅▞▅▞▝▝▚▝▟▜▝▜▅▃▜▞▙▝▇▃▚▃▃▃▝▞▞▟▇▛▐▝▜▟▊▝▚▝▇▞▟▞▄▝▜▟▆▟▐▟▄▜▅▟▝▞▅▟▄▟▝▟▟▟▚▃▙▝▃▝▚▟▄▞▜▟▆▃▃▞▙▟▚▝▞▝▃▛▇▟▛▃▚▟▜▟▟▃▝▝█▃▚▝▜▝▞▟▞▞▚▟▟▝▃▛▐▞▛▞▄▞▚▝▉▟▟▃▙▝▊▃▙▞▟▛▐▞▟▟▐▛▐▜▞▟▟▟▛▜▟▃▅▟▃▜▝▟▐▜▛▝▉▟▝▃▟▝▞▝▃▃▝▟▄▝▃▟▐▞▙▝▝▟▞▃▄▜▞▝▅▜▛▜▙▟▆▝▄▟▐▃▚▝▆▃▜▃▅▝▊▝▄▝▟▟▉▞▟▜▄▃▝▞▟▝▐▝▃▟▊▝▇▝▚▃▜▟█▞▟▟▞▞▅▞▜▃▚▝▄▟▆▞▜▞▛▝▇▟▜▞▟▟▚▜▜▟▐▜▟▟▅▜▛▟▛▜▄▞▚▝▄▛▇▝▝▝▐▜▝▟▞▃▜▞▞▞▙▝▐▝▃▞▛▟▅▟▇▝▆▝█▞▚▜▛▝▅▞▜▜▅▜▛▝▚▞▛▛▇▞▅▜▞▜▜▃▚▃▝▟▊▞▅▟█▞▙▝█▝▆▜▚▜▝▃▄▝▟▝▐▟▄▟▄▝▊▃▝▟▅▃▛▃▄▜▚▃▄▜▞▜▞▃▙▜▝▃▄▟█▞▜▞▟▟▃▞▅▝▚▜▙▜▄▝▄▝▚▜▚▛▇▃▙▜▛▜▄▟▜▃▛▜▛▜▜▃▚▞▄▜▜▝▆▃▜▟▟▜▚▝▊▟▞▝▜▟▅▞▝▟▅▃▛▝▄▝▛▝▅▜▅▞▝▞▝▟▚▝▛▟▊▞▛▞▟▜▅▃▙▝▝▜▟▟▛▃▞▝▐▝▃▝▛▜▝▝▛▝▟▞▚▜▛▃▆▃▃▝▞▟▊▞▃▟▚▟▊▟▐▟▆▝▐▝▜▞▅▟▟▟▄▃▃▞▅▟▊▃▛▝▝▟▊▃▙▞▜▝▞▝▄▜▛▃▃▃▛▟▞▝▛▝▝▜▜▟█▞▆▃▞▝▉▟▞▞▃▟▚▟▝▃▛▞▄▜▄▝▟▃▟▟▝▜▟▝▐▜▞▞▅▝▉▟▇▞▆▜▜▝▚▜▛▟▟▝▜▝▆▝▝▃▝▟▆▟▃▛▇▝▇▃▃▝▉▝▄▃▟▞▃▟▆▟▅▟▝▜▛▝▅▝▅▛▐▝▅▟▝▝▚▟▅▟▛▟█▜▅▝▅▃▆▃▞▟▉▝▊▟▊▛▐▜▚▞▜▟▇▛▐▞▚▞▛▜▙▝▛▛▇▞▆▜▟▟▞▝▛▝▐▃▜▃▚▝▜▞▜▞▙▃▟▃▟▝▇▟▆▝▃▃▆▃▜▃▄▟▟▞▞▝▟▃▝▝▃▃▜▜▃▃▃▞▃▝▆▟▐▜▅▞▟▜▝▜▞▞▆▝▆▃▜▟▃▃▄▞▚▜▞▟█▟▐▟▛▟▇▝▐▜▄▟▆▃▝▃▝▜▅▞▝▃▅▞▜▟▐▝▄▝▐▃▃▝▝▜▅▃▝▞▚▟▟▞▄▛▇▛▐▜▚▃▚▞▛▜▝▟▐▞▜▜▃▝▊▃▝▟▇▟▝▞▆▃▚▝▚▟▄▞▝▝▄▜▜▝▇▟▆▜▚▃▛▟▆▝▟▃▆▜▝▜▄▟█▛▇▟▅▞▃▝▞▝▐▞▄▝▅▞▚▃▛▜▙▝▇▟▅▝▊▝▚▟▅▜▟▝▇▝▝▞▞▝▄▜▙▞▃▞▅▟▇▞▛▞▝▜▄▝▚▃▜▞▝▞▆▝▟▝▐▃▄▃▃▃▞▞▜▝▇▃▙▟▆▞▞▞▙▝▐▜▞▝▜▞▟▝▉▟▞▟▛▟▛▞▄▞▚▝▐▜▃▝▄▞▅▟▆▝▚▝▞▝▅▃▞▞▟▜▅▟▜▞▚▜▝▝▅▞▄▝▃▜▛▞▄▝▃▃▚▝▐▞▚▃▞▃▅▞▚▞▙▟▞▞▙▃▙▜▚▜▄▟▝▃▆▃▅▝▆▃▞▜▚▟▊▟▃▝▜▟▞▃▅▟▚▟▐▃▃▞▜▃▃▞▝▜▛▝▟▛▐▝▊▟▝▝▅▟▉▟█▝█▝▟▞▃▃▛▞▜▞▄▞▄▝▛▝▜▃▅▟▛▞▟▛▐▟▇▟█▟▅▜▚▃▚▝▇▟█▜▞▞▃▟▉▝▆▝▐▞▟▞▜▝▟▝▜▜▛▞▅▟▃▜▃▟▉▞▃▜▝▞▚▜▜▝▚▃▝▟▐▟▅▝▅▜▄▜▜▝▇▜▝▝▜▟▄▟▉▃▄▝▜▛▇▃▞▞▆▃▙▃▞▜▝▟▊▟▇▜▅▜▃▞▟▞▛▃▙▞▚▃▞▜▃▟▆▟▞▟▃▜▃▞▟▟▉▞▃▟▞▝▆▝▚▞▃▟▇▟▆▃▚▛▐▟█▜▝▟▃▟▃▝▐▃▙▝▉▝▚▞▙▟█▜▞▞▛▞▚▃▅▟▜▃▃▃▚▝▞▝▉▟▜▝▜▝▛▝▜▝▐▞▟▞▝▞▚▃▝▜▜▃▚▞▄▞▞▜▞▃▝▜▞▜▙▝▆▜▛▝▞▟▊▃▙▃▚▞▜▞▆▝▟▞▄▃▜▟▄▝▛▃▝▞▅▞▛▟▆▜▙▜▞▝▛▃▚▞▄▝▜▃▙▜▝▝▞▞▝▜▟▝▅▝▄▝▄▝▊▃▝▟▇▜▟▞▚▃▄▟▚▜▃▞▄▝▃▃▙▃▟▟▟▝▅▞▞▟▃▞▞▝▟▃▅▝▝▞▅▞▜▜▃▝▛▟▞▝▅▞▃▃▝▃▄▞▝▃▙▝▊▜▅▝▃▝█▜▙▟▅▜▃▝▐▃▅▟▜▟▛▝▄▃▛▝▊▝▄▜▅▃▟▟▛▜▟▞▝▟▇▝▞▟▇▜▃▞▆▃▝▃▃▝▃▟▝▝▛▞▙▞▟▟▄▜▞▝▅▟▛▟▃▟▄▞▝▟▛▟▃▜▜▃▜▞▛▜▃▞▚▃▟▞▃▜▟▟▜▟▉▃▃▝▉▛▇▞▆▟█▛▇▝▜▝▚▞▄▝▆▞▟▟▝▜▅▜▝▟█▝▃▟▅▜▜▛▇▟▚▃▛▟▉▞▙▝▛▟▐▜▛▟▃▝▝▝▆▝█▝▃▞▅▃▞▃▅▜▙▞▞▃▚▃▞▟▟▟▞▃▞▝▇▃▟▟▆▝▐▞▄▜▅▞▜▜▟▟▞▝▄▝▐▟▆▃▚▃▛▝▄▝▅▜▙▃▃▟█▟▞▟▜▃▙▝▜▃▃▃▙▟▉▟▞▝▃▜▞▟▇▞▞▟▚▝▅▝▄▟▃▃▄▃▆▜▚▟▄▃▆▃▆▟▇▝▚▝▄▜▜▞▚▝▊▛▇▟▇▞▅▜▜▝▃▟▊▞▞▞▅▛▇▞▜▟▅▞▚▞▝▜▞▃▆▝▃▜▝▟▉▜▚▟▃▞▆▃▞▃▝▞▄▟█▝▃▟▅▜▞▝▇▟▜▃▄▞▆▃▟▞▟▃▝▃▃▛▐▝▊▝▉▞▃▟▊▟█▟▝▝▟▝▊▟▚▜▝▜▜▟▚▞▝▜▃▃▙▜▝▝▅▜▞▟▊▝▐▃▝▜▅▝▊▃▆▞▟▃▟▞▚▃▛▃▆▃▅▟█▛▐▞▝▝▇▝▊▟▚▝▇▞▛▞▆▟▊▛▇▞▝▟▆▟▃▛▐▞▃▝▇▞▛▟▅▝▐▝▟▃▞▝▟▞▙▝█▝▃▝▚▜▞▜▛▃▟▃▞▝▝▝▇▟█▝▅▟▐▝▅▞▃▜▃▝▛▞▜▜▞▃▃▞▄▃▛▟▊▟▄▜▄▜▛▜▟▟▉▟▅▞▃▜▜▃▃▃▅▝▐▟█▝▞▟▞▝▅▜▃▛▇▞▛▞▙▜▚▝▜▞▙▝▃▃▃▞▛▟▃▞▜▜▅▝█▃▚▞▟▝▐▝█▝▇▜▛▜▟▝▃▃▙▟▄▞▝▜▛▝▅▃▛▃▆▜▞▞▝▜▟▟▝▞▜▛▐▝▃▝▞▞▟▝▉▝▞▝▞▟▞▃▝▃▝▃▙▝▝▝█▜▄▞▄▟▄▟▊▟▛▜▛▟▅▞▃▟▅▞▙▞▆▛▇▜▝▝▛▃▜▝▅▃▛▝▛▜▚▃▅▟▚▜▃▜▟▃▚▟▅▞▟▟▐▝▇▝▄▝▄▝▛▝▊▟▞▟▉▜▙▃▜▟▞▃▚▜▄▟▊▟█▜▝▟▟▛▇▞▟▝▝▝▞▝▜▝▊▟▞▜▜▜▜▝▐▜▞▜▜▃▄▝▟▞▅▝▜▟▅▃▜▟▊▛▐▟▟▟▇▜▄▃▞▜▛▝▜▞▆▃▜▛▇▟▆▟▜▟▝▞▚▝▆▜▃▝▃▃▃▞▆▝▅▟█▃▃▝▛▝▚▜▝▟▝▛▐▜▛▞▅▟▟▟▆▃▝▟▟▜▝▝█▝▚▃▟▟▞▞▄▟▇▃▆▝▆▃▃▝▝▞▜▞▞▝▜▞▚▃▃▜▜▝▐▟▃▝▟▝▜▝▉▟▞▃▄▟▇▜▅▟█▞▆▞▜▟▄▝▚▃▟▜▄▟▊▞▝▃▆▝▚▟▜▃▞▝▚▝▄▝▊▝▟▟▄▝▅▝▊▝▄▞▛▝▅▝▅▜▚▃▆▃▞▟▐▝▝▝▛▝▄▟▚▟█▟▉▝▆▝▝▝▃▃▄▟▞▃▆▝▛▞▞▝▆▃▙▜▝▝▜▃▛▞▙▝▚▞▃▜▚▝▜▃▞▃▛▃▄▝▐▃▆▜▄▞▙▝▟▝▜▞▛▛▐▜▞▞▅▃▜▜▅▟▊▟▜▝▊▜▟▃▞▃▆▃▝▟▜▞▄▞▜▜▙▃▃▃▜▃▞▞▝▟▜▜▛▞▅▝▟▃▅▟▛▝▐▝█▞▟▟▞▜▞▟▝▃▄▟▇▝▅▃▚▝▛▞▝▝█▝▃▃▄▜▄▃▜▞▆▝▚▞▟▞▃▝▜▝▐▜▛▝▜▜▅▃▅▞▜▜▃▟▃▝▄▞▄▃▅▞▚▞▃▞▚▃▅▝▐▝▝▜▞▟▄▜▝▝▜▝█▝▅▟▊▟▐▃▟▟▐▃▛▝▟▝▅▃▄▟▟▝▃▃▞▝▄▟▅▟▃▞▆▝▞▃▚▜▞▞▙▝▜▞▆▝▛▟▅▟▛▜▙▜▄▞▄▞▆▞▛▃▟▃▄▛▇▟▃▝▟▟▐▟▚▝▝▜▟▃▝▃▄▃▛▜▞▜▟▝▊▝▅▜▃▝▆▃▃▟▊▃▙▃▃▜▙▟▄▜▟▞▟▃▟▃▝▜▃▟▊▜▄▝█▝▅▜▃▛▐▃▞▝▉▝▟▟▞▞▟▃▟▝█▞▛▝▐▟▐▝▇▃▅▝▃▝▄▞▙▝█▜▄▟▊▝▞▟▛▟▟▝▃▛▐▃▟▜▜▟▉▞▞▃▃▝▉▜▚▝▛▝▐▞▜▟▄▜▚▜▛▝▐▝▅▞▜▃▞▝▇▞▞▟▇▝▚▃▆▃▄▟▆▃▞▞▃▝▃▝▛▜▝▝▐▃▜▟▉▝▊▟▞▃▛▟▐▟▅▝▝▃▅▟▄▃▝▝▉▝▉▝▝▝▃▝▉▝█▝▟▃▅▞▟▃▝▜▚▞▆▟▄▟▄▝▇▛▇▝▊▟▉▞▛▞▆▜▛▝▃▟▚▝▚▜▝▜▜▃▃▞▛▜▟▟█▃▜▞▚▞▃▝▉▃▛▝▇▜▜▞▟▜▃▝▆▜▛▞▃▝▇▃▆▟▃▃▃▝▟▝▆▝▃▜▃▟▚▜▞▝▃▃▅▞▙▟▉▝▄▜▜▟▛▝▝▃▚▜▃▞▞▝█▝▐▜▄▝█▞▟▝▟▜▅▞▃▞▚▃▄▟▅▝▇▞▙▟▞▞▆▟▇▃▜▟▟▜▄▟▜▃▚▞▚▟▄▜▄▞▛▞▚▃▞▝▚▞▝▝█▝▅▞▟▟▇▟▄▜▅▝▜▝▅▃▟▝▅▝▜▞▝▟▚▞▆▝▟▝▟▟▉▟█▜▙▟▄▃▚▟▚▃▃▞▃▜▟▜▞▝█▃▝▃▆▝█▝▅▃▄▟▊▃▅▃▅▃▚▛▇▃▃▟▅▝▄▟▅▜▄▞▃▟▊▛▇▞▜▟▊▛▐▃▆▟▐▃▃▟▊▝▆▃▝▜▚▞▙▞▜▃▙▃▃▃▅▞▙▜▚▟▃▝█▃▞▟▚▜▝▃▟▟▝▞▚▟▞▞▞▃▙▝▜▝▜▃▆▝▆▝█▟▟▝▉▝▄▝▟▝▐▜▃▞▄▝▅▞▃▟▇▟▝▟▜▟▅▟▝▟▟▟▟▝▅▜▟▟▐▟▐▜▟▞▃▜▞▜▝▃▞▜▙▝▜▝▚▝▜▞▚▃▆▞▙▟▃▃▄▞▟▟▟▜▚▟▊▜▝▃▛▞▜▞▜▟▅▟▇▞▄▛▐▜▃▃▅▜▙▞▆▝▆▛▐▞▜▝▐▝▞▟▉▜▃▟▄▟█▞▛▟█▟█▝▅▞▚▃▅▛▇▃▃▛▐▟▝▞▞▝▆▝▊▝▝▟▝▃▙▃▙▜▟▟▆▃▝▝▐▞▚▞▟▃▃▛▇▟▉▜▝▃▝▜▙▟▃▟▐▛▇▝▄▟▇▃▙▟▇▟▅▟▝▜▅▝▜▛▇▟▄▃▜▛▇▃▅▃▄▝█▜▝▟▚▃▚▟▊▜▚▝▛▟█▃▄▟▜▝▅▟▐▝▃▝▉▝▄▜▞▟▅▟▞▞▙▜▜▟▜▞▟▃▄▜▚▟▃▟▉▃▛▜▞▜▟▝▆▝▝▟█▝▃▝▉▞▚▃▙▟█▃▆▟▞▃▙▞▞▝▊▝▅▃▞▝▄▜▛▞▅▜▟▃▄▃▃▃▚▟▛▟▞▜▞▜▟▃▛▃▃▟▐▞▚▝▆▞▃▞▟▟▞▞▝▃▅▟▃▟▐▞▙▟▟▞▛▃▚▞▛▟▟▝▇▜▛▟▛▝▜▛▐▟▄▝▝▝▜▞▟▝▄▝▉▃▞▝▃▝▟▃▝▝▃▟▜▟▐▝▞▞▃▝▉▃▄▝▆▃▅▝▐▟▊▝▇▝▛▞▜▟▅▟▝▝▞▝▐▝█▟▟▜▃▜▝▞▞▟▆▝▉▜▛▜▄▝▃▛▐▝▄▟▐▜▛▝▆▃▄▟▞▜▙▝▄▜▚▟▆▞▞▞▜▞▝▃▃▟▚▃▝▝▜▟▜▃▜▝▝▜▝▝▅▞▃▟▉▃▞▝▜▟▄▜▅▞▃▝▞▃▛▝▆▃▙▝▊▃▙▃▟▃▚▝█▟▇▃▙▞▟▟▛▃▚▝▚▟▅▝▐▃▛▝▟▜▝▜▛▜▝▞▃▝▉▟▚▃▚▝▄▝▉▃▜▃▝▟▃▟▇▞▃▃▛▜▙▜▄▝▐▝▉▞▄▞▆▟▜▜▚▜▅▞▛▃▆▛▇▜▃▝▃▃▄▜▅▝█▝▃▟▛▟▞▃▚▝▊▞▃▃▄▝▇▜▚▃▚▜▚▟▊▃▚▝▞▝▇▜▅▜▙▞▛▃▜▟▐▜▄▞▆▟▆▟▃▟▟▝▇▟▇▃▝▜▛▝▆▟▊▞▜▟▐▟▅▜▙▝█▟▛▝▞▜▙▟▆▃▜▟▜▟▞▞▜▝▟▃▝▞▚▛▐▝▄▝▐▝▃▝█▃▟▜▃▞▜▝█▝▇▃▚▝▚▟▝▝▜▞▄▞▚▞▆▞▚▞▛▃▆▜▃▟▊▞▝▃▛▝▆▃▙▃▚▟▟▟▐▛▐▃▆▜▝▞▞▞▜▟▛▟▚▃▞▜▞▃▜▜▅▜▄▟▊▜▜▜▜▜▜▟▄▜▜▞▟▜▜▟▆▝▇▞▃▃▆▝▅▜▜▃▞▝▃▝▄▝▉▟▊▃▆▟▟▟█▃▅▝▛▞▆▜▝▃▜▃▙▝▐▞▆▝▞▞▜▜▃▟▝▃▜▟▉▟▞▝█▝▛▜▞▟▚▜▟▞▃▜▃▝▃▝▅▝▊▝▛▜▛▟▇▞▜▜▚▃▝▟▃▞▟▟▚▝▉▟▟▞▟▜▟▃▜▃▃▞▜▞▃▟▐▝▟▝▝▃▅▟▇▞▃▃▛▝▅▟▊▜▅▜▅▃▝▞▙▞▆▝▄▝▆▃▝▜▟▝▞▝▟▞▚▝█▃▜▝▇▟▄▃▃▞▞▝▊▟▇▞▃▝▃▜▛▞▃▝▐▞▃▞▙▟▃▃▆▝▐▃▚▃▚▞▞▃▙▝▊▃▅▝▆▛▇▃▜▞▃▟▊▞▜▝█▝▛▃▆▛▇▞▜▜▚▟▟▞▞▟▝▟▐▃▄▝▅▝▃▜▃▜▟▟▉▞▙▟▉▃▆▞▄▞▄▃▝▟▆▃▃▞▟▃▙▜▅▟▚▞▟▟█▟▐▞▚▝▅▟▟▞▆▟▉▟▐▟▊▟▚▟█▜▟▟▅▜▄▃▝▟▟▝▝▟▞▃▜▜▞▃▄▃▚▞▞▝▟▜▜▃▃▟▅▝▜▃▃▟▆▃▆▟▝▟▊▝▆▛▇▝▜▜▞▟▐▟▊▟▆▞▃▝▉▜▄▟▊▝▇▃▅▞▅▝▆▟▛▟▟▛▇▃▙▝▉▃▆▟▚▟▛▟▉▝▆▟▃▝▇▝▜▃▅▜▅▜▙▞▅▟▄▝█▝▆▞▃▛▐▟▝▝▇▜▃▟▆▞▄▞▆▝▆▜▟▃▙▝▛▞▆▃▞▟▜▝▞▜▙▜▝▃▞▟▞▜▞▞▞▟▐▜▝▟█▝▟▃▅▞▄▟▆▝▞▝▇▝▛▞▄▞▛▜▟▞▆▝▉▝▊▜▜▝▄▟▅▟▚▝▐▟▜▝▛▜▚▝▆▟▆▞▞▝▃▃▆▟▝▝█▝▟▝▄▃▃▟▃▛▇▝▟▜▟▜▞▜▚▞▙▝▉▞▄▜▙▟▄▟▛▝▄▝▐▝▆▟▛▟▄▟▆▛▐▟▐▞▄▝▃▟▛▝▃▝▝▃▚▞▃▞▄▟▝▜▚▞▜▟▃▃▜▜▛▟▝▝▊▞▝▟▆▜▃▝▄▞▝▜▞▜▝▝▜▜▟▟▊▝▛▟▇▟▉▟▉▞▛▝▊▜▜▝▄▟▇▝▄▃▄▝▝▞▞▞▟▜▛▟▝▃▄▟▐▞▅▟▝▞▆▝▅▝▟▟▐▜▅▞▆▝▊▝▉▜▟▜▛▝▜▞▚▟▝▝▛▜▟▝▇▃▚▃▜▞▄▜▄▞▜▃▅▞▛▟▟▟▝▃▞▟▛▃▃▟▆▟▛▝▐▝▆▃▟▜▅▞▟▝▞▝▉▟▉▜▟▟▆▞▝▟▐▞▆▞▙▟▄▞▜▝▅▟▞▞▃▜▄▟▞▟▐▃▞▟▉▝█▞▚▜▉▜▉
+[
+    {
+        "id":1,
+        "category_id":1,
+        "name":"Config Ejample 01",
+        "description":"Config Online Example",
+        "config_payload":{
+            "payload":"[instant_split]HTTP/ 2 HTTP/1.1 CONNECT HTTP/1.1[lf][lf]#[instant_split]HTTP/ 2 \\\\r\\\\n\\\\r\\\\n#[instant_split]HTTP/ [lf][lf]#[instant_split]HTTP/ 2 HTTP/1.1 [rotate=GET;POST;PUT;HEAD;OPTIONS;PATCH;DELETE;CONNECT;PROPFIND;PROPPATCH;MKCOL;COPY;MOVE;LOCK;UNLOCK;UPDATE;SEARCH] /Allow/HTTP/1.1[lf]host: cloudflare.com;twitter.com PATCH / Cache-Control: private: Web-security[lf]host: www.veek.com.br[lf]User-Agent: Rustproxy\\nProxy-Authorization: Basic base64(usuario:senha)\\nKeep-Alive: timeout=120, max=300\\nCONNECT 209.14.88.124:80 HTTP/1.1\\nConnection: keep-alive[lf]Keep-Alive: timeout=120, max=300[lf][lf]",
+            "sni":null
+        },
+        "config_openvpn":null,
+        "config_v2ray":null,
+        "auth":{
+            "username":null,
+            "password":null,
+            "v2ray_uuid":null
+        },
+        "proxy":{
+            "host":null,
+            "port":null
+        },
+        "server":{
+            "host":"slw.meowvpn.shop",
+            "port":80
+        },
+        "dnstt_key":null,
+        "dnstt_server":null,
+        "dnstt_name_server":null,
+        "hy_obfs":null,
+        "hy_up_mbps":100,
+        "hy_down_mbps":150,
+        "hy_insecure":true,
+        "hy_port":"13375",
+        "hy_version":1,
+        "dns_server":{
+            "dns1":"2001:4860:4860::8888",
+            "dns2":"1.1.1.1"
+        },
+        "udp_ports":[
+            7100,
+            7200,
+            7300,
+            7400
+        ],
+        "mode":"SSH_DIRECT",
+        "tls_version":"TLSv1.2",
+        "status":"ACTIVE",
+        "url_check_user":"https://1865babe33.dtunnel.pp.ua:2053",
+        "icon":"https://i.ibb.co/YPPMKJw/ic-tim.png",
+        "sorter":1
+    },
+    {
+        "id":2,
+        "category_id":2,
+        "name":"Config Ejample 02",
+        "description":"Config Online Example",
+        "config_payload":{
+            "payload":"[instant_split]HTTP/ 2 HTTP/1.1 CONNECT HTTP/1.1[lf][lf]#[instant_split]HTTP/ 2 \\\\r\\\\n\\\\r\\\\n#[instant_split]HTTP/ [lf][lf]#[instant_split]HTTP/ 2 HTTP/1.1 [rotate=GET;POST;PUT;HEAD;OPTIONS;PATCH;DELETE;CONNECT;PROPFIND;PROPPATCH;MKCOL;COPY;MOVE;LOCK;UNLOCK;UPDATE;SEARCH] /Allow/HTTP/1.1[lf]host: cloudflare.com;twitter.com PATCH / Cache-Control: private: Web-security[lf]host: www.veek.com.br[lf]User-Agent: Rustproxy\\nProxy-Authorization: Basic base64(usuario:senha)\\nKeep-Alive: timeout=120, max=300\\nCONNECT 209.14.88.124:80 HTTP/1.1\\nConnection: keep-alive[lf]Keep-Alive: timeout=120, max=300[lf][lf]",
+            "sni":null
+        },
+        "config_openvpn":null,
+        "config_v2ray":null,
+        "auth":{
+            "username":null,
+            "password":null,
+            "v2ray_uuid":null
+        },
+        "proxy":{
+            "host":null,
+            "port":null
+        },
+        "server":{
+            "host":"slw.meowvpn.shop",
+            "port":80
+        },
+        "dnstt_key":null,
+        "dnstt_server":null,
+        "dnstt_name_server":null,
+        "hy_obfs":null,
+        "hy_up_mbps":100,
+        "hy_down_mbps":150,
+        "hy_insecure":true,
+        "hy_port":"13375",
+        "hy_version":1,
+        "dns_server":{
+            "dns1":"2001:4860:4860::8888",
+            "dns2":"1.1.1.1"
+        },
+        "udp_ports":[
+            7100,
+            7200,
+            7300,
+            7400
+        ],
+        "mode":"SSH_DIRECT",
+        "tls_version":"TLSv1.2",
+        "status":"ACTIVE",
+        "url_check_user":"https://1865babe33.dtunnel.pp.ua:2053",
+        "icon":"https://i.ibb.co/YPPMKJw/ic-tim.png",
+        "sorter":1
+    },
+    {
+        "id":3,
+        "category_id":3,
+        "name":"Config Ejample 03",
+        "description":"Config Online Example",
+        "config_payload":{
+            "payload":"[instant_split]HTTP/ 2 HTTP/1.1 CONNECT HTTP/1.1[lf][lf]#[instant_split]HTTP/ 2 \\\\r\\\\n\\\\r\\\\n#[instant_split]HTTP/ [lf][lf]#[instant_split]HTTP/ 2 HTTP/1.1 [rotate=GET;POST;PUT;HEAD;OPTIONS;PATCH;DELETE;CONNECT;PROPFIND;PROPPATCH;MKCOL;COPY;MOVE;LOCK;UNLOCK;UPDATE;SEARCH] /Allow/HTTP/1.1[lf]host: cloudflare.com;twitter.com PATCH / Cache-Control: private: Web-security[lf]host: www.veek.com.br[lf]User-Agent: Rustproxy\\nProxy-Authorization: Basic base64(usuario:senha)\\nKeep-Alive: timeout=120, max=300\\nCONNECT 209.14.88.124:80 HTTP/1.1\\nConnection: keep-alive[lf]Keep-Alive: timeout=120, max=300[lf][lf]",
+            "sni":null
+        },
+        "config_openvpn":null,
+        "config_v2ray":null,
+        "auth":{
+            "username":null,
+            "password":null,
+            "v2ray_uuid":null
+        },
+        "proxy":{
+            "host":null,
+            "port":null
+        },
+        "server":{
+            "host":"slw.meowvpn.shop",
+            "port":80
+        },
+        "dnstt_key":null,
+        "dnstt_server":null,
+        "dnstt_name_server":null,
+        "hy_obfs":null,
+        "hy_up_mbps":100,
+        "hy_down_mbps":150,
+        "hy_insecure":true,
+        "hy_port":"13375",
+        "hy_version":1,
+        "dns_server":{
+            "dns1":"2001:4860:4860::8888",
+            "dns2":"1.1.1.1"
+        },
+        "udp_ports":[
+            7100,
+            7200,
+            7300,
+            7400
+        ],
+        "mode":"SSH_DIRECT",
+        "tls_version":"TLSv1.2",
+        "status":"ACTIVE",
+        "url_check_user":"https://1865babe33.dtunnel.pp.ua:2053",
+        "icon":"https://i.ibb.co/YPPMKJw/ic-tim.png",
+        "sorter":1
+    }
+]
